--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,15 @@
 
 	<groupId>com.kinancity</groupId>
 	<artifactId>kinancity-parent</artifactId>
-	<version>2.1.16-SNAPSHOT</version>
+	<version>2.1.161-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Kinan City</name>
-	<url>https://github.com/drallieiv/KinanCity</url>
+	<url>https://github.com/ReuschelCGN/KinanCityAI</url>
 
     <scm>
-		<url>https://github.com/drallieiv/KinanCity</url>
-		<developerConnection>scm:git:git@github.com:drallieiv/KinanCity.git</developerConnection>
+		<url>https://github.com/ReuschelCGN/KinanCityAI</url>
+		<developerConnection>scm:git:git@github.com:ReuschelCGN/KinanCityAI.git</developerConnection>
 	  <tag>v2.1.8</tag>
   	</scm>
 
@@ -40,7 +40,7 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/drallieiv/KinanCity</url>
+			<url>https://maven.pkg.github.com/ReuschelCGN/KinanCityAI</url>
 		</repository>
 	</distributionManagement>
 
