--- a/KinanCity-captcha-server/pom.xml
+++ b/KinanCity-captcha-server/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 
 	<artifactId>kinancity-captcha-server</artifactId>
-  	<version>2.1.14-SNAPSHOT</version>
+  	<version>2.1.161-SNAPSHOT</version>
 
 	<repositories>
 		<repository>
@@ -21,7 +21,7 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/drallieiv/KinanCity</url>
+			<url>https://maven.pkg.github.com/ReuschelCGN/KinanCityAI</url>
 		</repository>
 	</distributionManagement>
 
@@ -88,7 +88,7 @@
 		<dependency>
 			<groupId>com.kinancity</groupId>
 			<artifactId>kinancity-captcha-anticaptcha</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.161-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Lombok -->
